
	* src/io-desktop/nadp-desktop-file.c (check_key_file):
	Only write a debug message if file is hidden.

2010-03-29 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-desktop-file.c:
	* src/io-desktop/nadp-desktop-file.h (nadp_desktop_file_remove_key):
	New function.

	* src/io-desktop/nadp-writer.c (nadp_iio_provider_write_item):
	Remove key when it is no more set.

	* src/io-desktop/nadp-keys.h: Remove unused keys.

	* src/io-desktop/nadp-reader.c (nadp_reader_ifactory_provider_read_done):
	Explicitly read subitems string list.

	* src/io-desktop/nadp-desktop-provider.c (ifactory_provider_iface_init):
	* src/io-desktop/nadp-writer.c:
	* src/io-desktop/nadp-writer.h (nadp_writer_ifactory_provider_write_done):
	New function: explicitly write subitems string list for actions and menus.

2010-03-28 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-data-boxed.h:
	* src/core/na-data-boxed.c (na_data_boxed_set_default): Removed function.

	* src/core/na-factory-object.c (set_defaults_iter):
	Only set a default value when the box has not been yet allocated.

	* src/api/na-ifactory-object.h:
	* src/core/na-ifactory-object.c (na_ifactory_object_get_data_groups):
	New function.

	* src/core/na-object-item-factory.c:
	* src/core/na-object-action.c (instance_init):
	* src/core/na-object-menu.c (instance_init):
	No more instantiate 'type' data box.

	* src/core/na-object-item-factory.c:
	NAFO_DATA_TYPE is no more automatically readen nor written.

	* src/io-desktop/nadp-desktop-provider.c (ifactory_provider_iface_init):
	Implement data writing.

	* src/io-desktop/nadp-keys.c:
	* src/io-desktop/nadp-keys.h (nadp_keys_get_group_and_key):
	Removed function.

	* src/io-desktop/nadp-reader.c
	(item_from_desktop_path): Test default value first.
	(nadp_reader_ifactory_provider_read_data): Use new desktop_entry field.

	* src/io-desktop/nadp-writer.c:
	* src/io-desktop/nadp-writer.h (nadp_writer_ifactory_provider_write_start,